assets/styles/main.css
/* ... */
.carousel-inner {
    padding: 0; }
    .carousel-inner .item img {
        margin: 0 auto;
        width: 40%; }
.carousel-control.left {
    background: none;
    margin-left: 15px; }
.carousel-control.right {
    background: none;
    margin-right: 15px; }
    .carousel-control img {
        width: 50px; }
.carousel-indicators li {
    margin: 1px 20px; }
.carousel-indicators .active {
    margin: 0 20px; }
@media (min-width: 768px) {
.carousel {
    margin: 0 auto;
    width: 1150px; }
.carousel-inner .item {
    margin: 0 15%; }
.carousel-inner .item img {
    float: left;
    margin: 0 auto;
    padding: 0 0 20px;
    width: 240px; }
.carousel-control img {
    width: auto; }
}


.content-section {
    padding: 20px 0; }
    .content-section h2,
    .content-section-alt h2 {
        color: #392245;
        font-size: 2.4em;
        letter-spacing: 0.08em;
        margin: 20px 0 0;
        padding: 20px 15px; }
    .content-section .tagline,
    .content-section-alt .tagline {
        font-size: 1.133em; }
    .content-section .carousel,
    .content-section-alt .carousel {
        padding: 0 15px; }
.content-section-alt {
    background: #000;
    color: #fff;
    padding: 20px 0 40px; }
    .content-section-alt h2 {
        color: #fff; }
    .content-section-alt input,
    .content-section-alt select,
    .content-section-alt textarea {
        color: #000;
        font-size: 15px; }
.content {
    padding: 0 15px; }
.product-caption {
    background: transparent url("/assets/bullet-icon.png") 0 0 no-repeat; }
.section-border {
    background: transparent url("/assets/flower-border-bg-m.jpg") 50% 0 no-repeat;
    background-size: 768px;
    height: 34px; }
.team-photos {
    display: block;
    margin: 20px 0; }
    .team-photos img {
        width: 90%; }
.page-links {
    font-family: "CentaurMT-BoldItalic", serif;
    font-size: 28px; }
    .page-links li {
        display: inline; }

@media (min-width: 768px) {
.content-section, .content-section-alt {
    padding: 0; }
    .content-section h2, .content-section-alt h2 {
        font-size: 3.529em;
        margin: 0 auto;
        width: 1150px; }
    .content-section .tagline,
    .content-section-alt .tagline {
        font-size: 1.647em; }
    .content-section br, .content-section-alt br {
        display: none; }
    .content {
        margin: 0 auto;
        width: 1150px; }
.team-photos {
    margin: 0 auto;
    width: 1150px; }
}

.main-intro {
    padding-top: 0; }
    .main-intro .inner {
        background: transparent url("/assets/dipper-main.png") 0 0 no-repeat;
        background-size: 220px;
        padding-top: 312px; }
@media (min-width: 768px) {
.main-intro {
    margin-bottom: -283px; }
    .main-intro .inner {
        background-position: 0 0;
        background-size: 517px;
        margin: 0 auto;
        min-height: 700px;
        padding: 200px 20px;
        position: relative;
        width: 1150px;
        z-index: 100; }
    .main-intro h2 {
        padding: 0 173px 35px 615px; }
        .main-intro h2 br {
            display: inline; }
    .main-intro .content {
        padding: 0 173px 0 615px; }
}

.features-benefits {
    background: #000 url("/assets/features-benefits-bg-m.jpg") 50% 0 no-repeat;
    background-size: 768px;
    padding: 0; }
    .features-benefits h2 {
        margin: 20px 0; }
    .features-benefits .tagline {
        padding-top: 30px; }
    .features-benefits .carousel-inner {
        padding-bottom: 50px; }
    .features-benefits .carousel-control img {
        padding-top: 32px; }
@media (min-width: 768px) {
.features-benefits {
    background: #000 url("/assets/features-benefits-bg.jpg") 50% 0 no-repeat;
    background-size: cover;
    max-height: 1034px; }
    .features-benefits .section-border {
        display: none; }
    .features-benefits h2 {
        margin: 0 auto;
        padding: 348px 0 76px 173px;
        width: 1150px; }
    .features-benefits .tagline {
        padding-top: 40px; }
    .features-benefits .carousel {
        height: 540px; }
    .features-benefits .carousel-indicators {
        bottom: 150px; }
    .features-benefits .carousel-control img {
        padding-top: 0; }
    .features-benefits .item p {
        margin-left: 240px;
        padding-left: 100px;
        padding-right: 20px; }
}

.meet-dipper {
    background: #fff url("/assets/meet-dipper-bg-m.jpg") 0 0 no-repeat;
    background-size: 768px;
    padding-bottom: 0; }
    .meet-dipper .section-border {
        background: transparent url("/assets/gradient-bottom.png") 0 100% repeat-x;
        background-size: auto; }
    .meet-dipper h2 {
        margin: 0;
        padding-bottom: 0; }
    .meet-dipper h2 br {
        display: none; }
    .meet-dipper .carousel {
        padding-top: 50px; }
    .meet-dipper .carousel-inner {
        margin-top: -38px; }
    .meet-dipper .item img {
        width: 80%; }
    .meet-dipper .product-caption {
        background: none;
        letter-spacing: -0.2px }
    .meet-dipper .carousel-indicators li {
        border-color: #662d91; }
    .meet-dipper .carousel-indicators .active {
        background-color: #662d91; }
    .meet-dipper .img-indicators {
        bottom: auto;
        left: 14px;
        margin: 0;
        top: 10px;
        width: auto; }
    .meet-dipper .img-indicators li {
        border-color: transparent;
        height: auto;
        margin: 0 6px;
        text-indent: inherit;
        width: auto; }
    .meet-dipper .img-indicators .active {
        background-color: transparent; }
    .meet-dipper .img-indicators img {
        width: 20px; }
    .meet-dipper .carousel-control {
        padding-top: 90px;
        top: 65px; }
/* ... */

